# zxing-cpp

core/: CMakeLists.txt
core/src/: Barcode.cpp  Barcode.h  BarcodeFormat.cpp  BarcodeFormat.h  BinaryBitmap.cpp  BinaryBitmap.h  BitArray.h  BitHacks.h  BitMatrix.cpp  BitMatrix.h  BitMatrixCursor.h  BitMatrixIO.cpp  BitSource.h  ByteArray.h  ByteMatrix.h  CharacterSet.cpp  CharacterSet.h  ConcentricFinder.cpp  ConcentricFinder.h  Content.cpp  Content.h  DecodeHints.cpp  DecoderResult.h  DetectorResult.h  ECI.cpp  Error.cpp  Error.h  Flags.h  GTIN.cpp  GTIN.h  GenericGFPoly.cpp  GenericGFPoly.h  GlobalHistogramBinarizer.cpp  GlobalHistogramBinarizer.h  GridSampler.cpp  GridSampler.h  HRI.cpp  HRI.h  HybridBinarizer.cpp  HybridBinarizer.h  (+28 more)
core/src/aztec/: AZDecoder.cpp  AZDetector.cpp  AZDetector.h  AZDetectorResult.h  AZEncoder.cpp  AZEncoder.h  AZEncodingState.h  AZHighLevelEncoder.cpp  AZReader.cpp  AZReader.h  AZToken.cpp  AZWriter.cpp  AZWriter.h
core/src/datamatrix/: DMBitLayout.cpp  DMDataBlock.cpp  DMDataBlock.h  DMDecoder.cpp  DMDetector.cpp  DMDetector.h  DMECEncoder.cpp  DMEncoderContext.h  DMHighLevelEncoder.cpp  DMReader.cpp  DMReader.h  DMSymbolInfo.cpp  DMSymbolInfo.h  DMSymbolShape.h  DMVersion.cpp  DMVersion.h  DMWriter.cpp  DMWriter.h
core/src/maxicode/: MCBitMatrixParser.cpp  MCDecoder.cpp  MCReader.cpp  MCReader.h
core/src/oned/: ODCodabarReader.cpp  ODCodabarReader.h  ODCodabarWriter.cpp  ODCodabarWriter.h  ODCode128Patterns.cpp  ODCode128Patterns.h  ODCode128Reader.cpp  ODCode128Reader.h  ODCode128Writer.cpp  ODCode128Writer.h  ODCode39Reader.cpp  ODCode39Reader.h  ODCode39Writer.cpp  ODCode39Writer.h  ODCode93Reader.cpp  ODCode93Reader.h  ODCode93Writer.cpp  ODCode93Writer.h  ODDXFilmEdgeReader.cpp  ODDXFilmEdgeReader.h  ODDataBarCommon.cpp  ODDataBarCommon.h  ODDataBarExpandedBitDecoder.cpp  ODDataBarExpandedBitDecoder.h  ODDataBarExpandedReader.cpp  ODDataBarExpandedReader.h  ODDataBarReader.cpp  ODDataBarReader.h  ODEAN13Writer.cpp  ODEAN13Writer.h  ODEAN8Writer.cpp  ODEAN8Writer.h  ODITFReader.cpp  ODITFReader.h  ODITFWriter.cpp  ODITFWriter.h  ODMultiUPCEANReader.cpp  ODMultiUPCEANReader.h  ODReader.cpp  ODReader.h  (+9 more)
core/src/pdf417/: CustomData.h  PDFBarcodeMetadata.h  PDFBarcodeValue.cpp  PDFCodeword.h  PDFCodewordDecoder.cpp  PDFCodewordDecoder.h  PDFDecoder.cpp  PDFDecoderResultExtra.h  PDFDetectionResultColumn.h  PDFDetector.h  PDFEncoder.h  PDFModulusPoly.cpp  PDFModulusPoly.h  PDFReader.cpp  PDFReader.h  PDFScanningDecoder.cpp  PDFWriter.cpp  PDFWriter.h  ZXBigInteger.cpp  ZXBigInteger.h  ZXNullable.h
core/src/qrcode/: QRBitMatrixParser.cpp  QRCodecMode.cpp  QRCodecMode.h  QRDataBlock.cpp  QRDataBlock.h  QRDataMask.h  QRDecoder.cpp  QRDetector.cpp  QRDetector.h  QRECB.h  QREncodeResult.h  QREncoder.cpp  QREncoder.h  QRErrorCorrectionLevel.cpp  QRErrorCorrectionLevel.h  QRFormatInformation.cpp  QRFormatInformation.h  QRMaskUtil.cpp  QRMaskUtil.h  QRMatrixUtil.cpp  QRReader.cpp  QRReader.h  QRVersion.cpp  QRVersion.h  QRWriter.cpp
core/src/tests/: CMakeLists.txt  test.cpp
core/src/tools/: algorithm.hpp  optional.hpp  string_view.hpp  type_traits.hpp  utility.hpp
example/: ZXingReader.cpp  ZXingWriter.cpp
test/unit/: BarcodeFormatTest.cpp  BitArrayUtility.h  BitHacksTest.cpp  CMakeLists.txt  PatternTest.cpp
test/unit/aztec/: AZDecoderTest.cpp  AZDetectorTest.cpp  AZHighLevelEncoderTest.cpp
test/unit/datamatrix/: DMDecodedBitStreamParserTest.cpp
test/unit/maxicode/: MCDecoderTest.cpp
test/unit/oned/: ODCode39ReaderTest.cpp  ODDataBarReaderTest.cpp
test/unit/pdf417/: PDF417DecoderTest.cpp
test/unit/qrcode/: QRErrorCorrectionLevelTest.cpp
